# read-qrcode

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_all.py
